--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -65,3 +65,6 @@ markdown {
   }
 }
 
+.width-zero-mat-content .mat-content {
+  width : 0;
+}
